crates/splot-cli/tests/snapshots/validate_snapshots__validate_summary_only_json.snap
---
source: crates/splot-cli/tests/validate_snapshots.rs
expression: stdout
---
{
  "summary": {
    "errors": 2,
    "warnings": 0,
    "info": 0,
    "conformant": false
  },
  "diagnostics": []
}
