crates/splot-cli/tests/snapshots/validate_snapshots__validate_summary_only_text.snap
---
source: crates/splot-cli/tests/validate_snapshots.rs
expression: stdout
---
2 error(s), 0 warning(s), 0 info
NOT conformant
